--- a/fxml/main.fxml
+++ b/fxml/main.fxml
@@ -75,7 +75,7 @@
             </Menu>
             <Menu mnemonicParsing="false" text="Build">
                <items>
-                  <MenuItem mnemonicParsing="false" onAction="#buildApprox" text="Build" />
+                  <MenuItem fx:id="buildMenuItem" disable="true" mnemonicParsing="false" onAction="#buildApprox" text="Build" />
                </items>
             </Menu>
             <Menu mnemonicParsing="false" text="Help">
