--- a/fxml/main.fxml
+++ b/fxml/main.fxml
@@ -46,15 +46,17 @@
             <Insets />
          </VBox.margin>
          <children>
-            <Label layoutX="14.0" layoutY="6.0" prefHeight="17.0" prefWidth="47.0" text="dx/dy =" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="5.0" />
-            <TextField fx:id="equationField" layoutX="57.0" layoutY="5.0" prefHeight="25.0" prefWidth="158.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="57.0" AnchorPane.rightAnchor="385.0" AnchorPane.topAnchor="5.0" />
-            <Button fx:id="buildButton" layoutX="534.0" layoutY="2.0" mnemonicParsing="false" onAction="#buildButtonClicked" text="Build" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="5.0" />
-            <Label layoutX="433.0" layoutY="9.0" prefHeight="17.0" prefWidth="23.0" text="ε =" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="144.0" AnchorPane.topAnchor="5.0" />
-            <TextField fx:id="epsilonField" layoutX="456.0" layoutY="5.0" prefHeight="25.0" prefWidth="86.0" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="58.0" AnchorPane.topAnchor="5.0" />
-            <Label layoutX="328.0" layoutY="9.0" prefHeight="17.0" prefWidth="30.0" text="y0 =" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="242.0" AnchorPane.topAnchor="5.0" />
-            <TextField fx:id="y0Field" layoutX="357.0" layoutY="5.0" prefHeight="25.0" prefWidth="72.0" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="171.0" AnchorPane.topAnchor="5.0" />
-            <Label layoutX="221.0" layoutY="9.0" prefHeight="17.0" prefWidth="30.0" text="x0 =" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="349.0" AnchorPane.topAnchor="5.0" />
-            <TextField layoutX="251.0" layoutY="5.0" prefHeight="25.0" prefWidth="72.0" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="277.0" AnchorPane.topAnchor="5.0" fx:id="x0Field" />
+            <Label layoutX="14.0" layoutY="6.0" prefHeight="17.0" prefWidth="47.0" text="dy/dx =" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="5.0" />
+            <TextField fx:id="equationField" layoutX="57.0" layoutY="5.0" prefHeight="25.0" prefWidth="95.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="57.0" AnchorPane.rightAnchor="448.0" AnchorPane.topAnchor="5.0" />
+            <Button fx:id="buildButton" defaultButton="true" layoutX="534.0" layoutY="2.0" mnemonicParsing="false" onAction="#buildButtonClicked" text="Build" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="5.0" />
+            <Label layoutX="448.0" layoutY="5.0" prefHeight="17.0" prefWidth="23.0" text="ε =" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="129.0" AnchorPane.topAnchor="5.0" />
+            <TextField fx:id="epsilonField" layoutX="456.0" layoutY="5.0" prefHeight="25.0" prefWidth="70.0" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="58.0" AnchorPane.topAnchor="5.0" />
+            <Label layoutX="255.0" layoutY="5.0" prefHeight="17.0" prefWidth="30.0" text="y0 =" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="315.0" AnchorPane.topAnchor="5.0" />
+            <TextField fx:id="y0Field" layoutX="281.0" layoutY="5.0" prefHeight="25.0" prefWidth="62.0" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="257.0" AnchorPane.topAnchor="5.0" />
+            <Label layoutX="158.0" layoutY="5.0" prefHeight="17.0" prefWidth="30.0" text="x0 =" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="412.0" AnchorPane.topAnchor="5.0" />
+            <TextField layoutX="188.0" layoutY="5.0" prefHeight="25.0" prefWidth="62.0" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="350.0" AnchorPane.topAnchor="5.0" fx:id="x0Field" />
+            <Label layoutX="351.0" layoutY="9.0" prefHeight="17.0" prefWidth="30.0" text="xn =" AnchorPane.bottomAnchor="9.0" AnchorPane.rightAnchor="219.0" AnchorPane.topAnchor="9.0" />
+            <TextField layoutX="398.0" layoutY="6.0" prefHeight="25.0" prefWidth="62.0" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="159.0" AnchorPane.topAnchor="5.0" fx:id="xnField" />
          </children>
       </AnchorPane>
    </children>
